--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcqJnfe16qa8TWfRi0/5R0",
+      "authorship_tag": "ABX9TyNj0gcyh5DzIztZNmqW8kOG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,55 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Random Coding Tips"
+      ],
+      "metadata": {
+        "id": "tqWLt93dBdzP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Constants go at the top of code so they're easy to find\n",
+        "CONSTANT='Whatever'\n",
+        "# or\n",
+        "WHATEVER='Constant'\n",
+        "# Python doesn't protect constants, but placing the variable in CAPS tells other\n",
+        "# coders that it should remain constant\n",
+        "\n",
+        "# Classes can contain their own Constants\n",
+        "class Cat():\n",
+        "  MEOW=3\n",
+        "  def meow(self):\n",
+        "    for _ in range(Cat.MEOW):\n",
+        "      print(\"Meow\")\n",
+        "\n",
+        "cat=Cat()\n",
+        "cat.meow()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VGPnnjnbBkxD",
+        "outputId": "6a111c76-5315-4a66-b779-63884fe2adc0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Meow\n",
+            "Meow\n",
+            "Meow\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Terminal Tips"
       ],
       "metadata": {
@@ -39,7 +88,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Command (or control) c ends an infinite loop"
+        "Control c ends an infinite loop"
       ],
       "metadata": {
         "id": "rzH_ZgRVgzo7"
@@ -292,6 +341,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Strings (str)"
+      ],
+      "metadata": {
+        "id": "3nkYEOSxH0uR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## String Multiplication"
       ],
       "metadata": {
@@ -328,7 +386,7 @@
         "        print('Gryffindor')\n",
         "    case 'Draco':\n",
         "        print('Slytherin')\n",
-        "    case _: # '_' is a placeholder for every other string\n",
+        "    case _: # '_' is a placeholder for every other input, aka, a wildcard variable\n",
         "        print('Who?')"
       ],
       "metadata": {
@@ -375,6 +433,70 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Tools"
+      ],
+      "metadata": {
+        "id": "y7WKfamLLCVL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Error Checking"
+      ],
+      "metadata": {
+        "id": "PlhuPbBeLGUo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# mypy checks for type errors"
+      ],
+      "metadata": {
+        "id": "3CckwuP2LNGN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Types"
+      ],
+      "metadata": {
+        "id": "oD7dESu3IIh_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Type Hints"
+      ],
+      "metadata": {
+        "id": "jMiQnpmEILvy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Type hints tell Python what type of value to expect\n",
+        "def yells(n=int):\n",
+        "  for _ in range(n):\n",
+        "    print('Ahhhh')\n",
+        "\n",
+        "amount:int=int(input('How many?')) # tell input to keep value an int\n",
+        "yells(amount)"
+      ],
+      "metadata": {
+        "id": "niXq2QyNIPTw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Homework"
       ],
       "metadata": {
@@ -402,7 +524,7 @@
         "id": "wfwXY4_hEllB",
         "outputId": "ef177040-edb9-41f7-b9d0-10b278e1cf36"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,9 +538,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "jAkoLW8aHZWN"
       },
