--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNj0gcyh5DzIztZNmqW8kOG",
+      "authorship_tag": "ABX9TyM1gD3q/0fCvjIupxCnz6A/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,7 +451,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# mypy checks for type errors"
+        "# mypy checks for errors, including: type, "
       ],
       "metadata": {
         "id": "3CckwuP2LNGN"
@@ -481,9 +481,8 @@
       "cell_type": "code",
       "source": [
         "# Type hints tell Python what type of value to expect\n",
-        "def yells(n=int):\n",
-        "  for _ in range(n):\n",
-        "    print('Ahhhh')\n",
+        "def yells(n=int)->str: # int tells expected input. str tells output\n",
+        "  return 'Ahhhh\\n'*n\n",
         "\n",
         "amount:int=int(input('How many?')) # tell input to keep value an int\n",
         "yells(amount)"
