--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM1gD3q/0fCvjIupxCnz6A/",
+      "authorship_tag": "ABX9TyNINZaKyS95th9cXon1ET2d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,16 +482,39 @@
       "source": [
         "# Type hints tell Python what type of value to expect\n",
         "def yells(n=int)->str: # int tells expected input. str tells output\n",
-        "  return 'Ahhhh\\n'*n\n",
+        "  return 'Ahhhh\\n' * n\n",
         "\n",
-        "amount:int=int(input('How many?')) # tell input to keep value an int\n",
-        "yells(amount)"
+        "amount:int=int(input('How many? ')) # tell input to keep value an int\n",
+        "yell=yells(amount)\n",
+        "print(yell)"
       ],
       "metadata": {
-        "id": "niXq2QyNIPTw"
+        "id": "niXq2QyNIPTw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "05c7ae3d-775c-4a2d-aac1-a8c2d6d7ccd8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many? 9\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "Ahhhh\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
