--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNINZaKyS95th9cXon1ET2d",
+      "authorship_tag": "ABX9TyNC5sqnPZoALsHN0XmEzqWD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,7 +471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Type Hints"
+        "## Type Hints & Doc Formatting"
       ],
       "metadata": {
         "id": "jMiQnpmEILvy"
@@ -482,6 +482,14 @@
       "source": [
         "# Type hints tell Python what type of value to expect\n",
         "def yells(n=int)->str: # int tells expected input. str tells output\n",
+        "  \"\"\"\n",
+        "  Yell n times\n",
+        "  :peram n: Number of times to yell\n",
+        "  :type n: int\n",
+        "  :raise TypeError: If n isn't an int\n",
+        "  :return: A string of n yells, one per line\n",
+        "  :rtype: str\n",
+        "  \"\"\"\n",
         "  return 'Ahhhh\\n' * n\n",
         "\n",
         "amount:int=int(input('How many? ')) # tell input to keep value an int\n",
@@ -493,21 +501,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05c7ae3d-775c-4a2d-aac1-a8c2d6d7ccd8"
+        "outputId": "9c6b7c62-d387-4837-8b44-5bac1caa7b59"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "How many? 9\n",
-            "Ahhhh\n",
-            "Ahhhh\n",
-            "Ahhhh\n",
-            "Ahhhh\n",
-            "Ahhhh\n",
-            "Ahhhh\n",
+            "How many? 3\n",
             "Ahhhh\n",
             "Ahhhh\n",
             "Ahhhh\n",
