--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNC5sqnPZoALsHN0XmEzqWD",
+      "authorship_tag": "ABX9TyP81e3/bbR4rug23LPaZ7rM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,6 +93,73 @@
       "metadata": {
         "id": "rzH_ZgRVgzo7"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Flags"
+      ],
+      "metadata": {
+        "id": "VxlLXFBB97lM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### argparse Library"
+      ],
+      "metadata": {
+        "id": "aaXMKtkuFgSi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import argparse\n",
+        "\n",
+        "parser=argparse.ArgumentParser(description='Yell out the stress')\n",
+        "parser.add_argument('-n',type=int,default=1,help='Number of times to yell')\n",
+        "args=parser.parse_args()\n",
+        "\n",
+        "for _ in range(args.n):\n",
+        "  print('Ahhh')"
+      ],
+      "metadata": {
+        "id": "jq8xrw5wFqtL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Coded"
+      ],
+      "metadata": {
+        "id": "Fk1_tlxRFbb9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# How to have a program interact with a flag\n",
+        "# e.g., <program name> -n 5\n",
+        "import sys\n",
+        "\n",
+        "if len(sys.argv)==1:\n",
+        "  print('ahhh')\n",
+        "elif len(sys.argv)==3 & sys.argv[1]=='-n':\n",
+        "  n=int(sys.argv[2])\n",
+        "  for _ in range(n):\n",
+        "    print('ahhh')\n",
+        "else:\n",
+        "  print('Usage: \"<program name> -n 5\" to print 5 ahhh')\n"
+      ],
+      "metadata": {
+        "id": "bXZj_yRd-iGs"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -503,7 +570,7 @@
         },
         "outputId": "9c6b7c62-d387-4837-8b44-5bac1caa7b59"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
