--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP81e3/bbR4rug23LPaZ7rM",
+      "authorship_tag": "ABX9TyO5TSOf7dmA8eLAnO5LgadJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -588,53 +588,38 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Homework"
+        "# Unpacking"
       ],
       "metadata": {
-        "id": "lO5Iwo89EaDp"
+        "id": "DaibaibzLul-"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "def main():\n",
-        "  case_convert()\n",
+        "def total(dollars,quarters,pennies):\n",
+        "  return (dollars*4+quarters)*25+pennies\n",
         "\n",
-        "def case_convert():\n",
-        "  var = input('Convert what to snake case? ')\n",
-        "  for i in range(len(var)):\n",
-        "    if i.isupper():\n",
-        "      i.swapcase()\n",
-        "  print(var.lower(), sep='_')\n",
-        "main()"
+        "currency=[1,4,100]\n",
+        "print(total(*currency),'pennies') # The * unpacks each item in the currency list"
       ],
       "metadata": {
+        "id": "jAkoLW8aHZWN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wfwXY4_hEllB",
-        "outputId": "ef177040-edb9-41f7-b9d0-10b278e1cf36"
+        "outputId": "099251fd-4be5-4cb3-b326-7e941a6d518e"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Convert what to snake case? bingBong\n",
-            "bingbong\n"
+            "300 pennies\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "jAkoLW8aHZWN"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
