--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5TSOf7dmA8eLAnO5LgadJ",
+      "authorship_tag": "ABX9TyNlJWnaWhvWpuFFAZKY7mte",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,6 +181,101 @@
         "def is_even(n):\n",
         "    return n % 2 == 0"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Functions"
+      ],
+      "metadata": {
+        "id": "GpO6uA2tgfAP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## map"
+      ],
+      "metadata": {
+        "id": "XBj7uaIMgkZS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "  upcase('this','list','of','words')\n",
+        "\n",
+        "def upcase(*words):\n",
+        "  upper=map(str.upper,words)\n",
+        "  print(*upper)\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "czd929IWgqw1",
+        "outputId": "37eda79e-a813-4473-faec-d8fae7cdf684"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "THIS LIST OF WORDS\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Libraries"
+      ],
+      "metadata": {
+        "id": "htAnDUuygE07"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6QvUUmuDgKmS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# List Comprehension"
+      ],
+      "metadata": {
+        "id": "1WWdNQc7aIi0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "  upper('bing','bam','boogie')\n",
+        "\n",
+        "def upper(*words): \n",
+        "  uppercase = [word.upper() for word in words]\n",
+        "  print(*uppercase)\n",
+        "\n",
+        "if __name__=='__main__':\n",
+        "  main()"
+      ],
+      "metadata": {
+        "id": "HsphNA0FaNwW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -592,6 +687,119 @@
       ],
       "metadata": {
         "id": "DaibaibzLul-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Can take a list of objects that would be printed as a list, & returns it without the extra ' or ,, etc."
+      ],
+      "metadata": {
+        "id": "S1FVk_q-YH1L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## args"
+      ],
+      "metadata": {
+        "id": "tGQVdeQhT5Y0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eg(*args):\n",
+        "  print('Positional:',args)\n",
+        "\n",
+        "eg(1,2,3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "motVFleeT_g9",
+        "outputId": "9c040dfe-506d-4103-c5d1-94b7b5773b4c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Positional: (1, 2, 3)\n",
+            "Named: {}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## kwargs"
+      ],
+      "metadata": {
+        "id": "G6vOnUlfVVQe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eg1(**kwargs):\n",
+        "  print('Named:',kwargs)\n",
+        "\n",
+        "eg(dollars=1,quarters=2,pennies=3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ZCnxqK1VcZI",
+        "outputId": "d9f506d2-9242-49eb-b18e-6411c4c6a63b"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Named: {'dollars': 1, 'quarters': 2, 'pennies': 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dicts"
+      ],
+      "metadata": {
+        "id": "XMbtJ2rLP8r9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def total(dollars,quarters,pennies):\n",
+        "  return (dollars*4+quarters)*25+pennies\n",
+        "\n",
+        "bag={'dollars':1,'quarters':4,'pennies':100}\n",
+        "print(total(**bag),'pennies') # The ** unpacks each item in the currency dict"
+      ],
+      "metadata": {
+        "id": "Jn-Et6L5P_by"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Lists"
+      ],
+      "metadata": {
+        "id": "AJVEm2YbPwia"
       }
     },
     {
