--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNlJWnaWhvWpuFFAZKY7mte",
+      "authorship_tag": "ABX9TyNQcyhdabueNI7Olaff+1VN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -214,22 +214,10 @@
         "  main()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "czd929IWgqw1",
-        "outputId": "37eda79e-a813-4473-faec-d8fae7cdf684"
+        "id": "czd929IWgqw1"
       },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "THIS LIST OF WORDS\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -252,10 +240,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# List Comprehension"
+        "# List/Dict Comprehension"
       ],
       "metadata": {
         "id": "1WWdNQc7aIi0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## List"
+      ],
+      "metadata": {
+        "id": "luG38OVizh0B"
       }
     },
     {
@@ -276,6 +273,50 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dict"
+      ],
+      "metadata": {
+        "id": "FgjhibPhzk98"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color_data=[\n",
+        "  {'color':'red','feeling':'warm'},\n",
+        "  {'color':'yellow','feeling':'warm'},\n",
+        "  {'color':'green','feeling':'neutral'},\n",
+        "  {'color':'purple','feeling':'neutral'},\n",
+        "]\n",
+        "warm=[\n",
+        "  color['color'] for color in color_data if color['feeling']=='warm'\n",
+        "]\n",
+        "\n",
+        "for warms in sorted(warm):\n",
+        "  print(warms)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ykt29lssznll",
+        "outputId": "dbf10db1-0be5-4af2-cc10-e20313e3e4b2"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red\n",
+            "yellow\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
