--- a/LearnPython.ipynb
+++ b/LearnPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LearnPython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQcyhdabueNI7Olaff+1VN",
+      "authorship_tag": "ABX9TyPrql6F00R2tD7/Rwr0uoLj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,13 +188,59 @@
         "# Functions"
       ],
       "metadata": {
+        "id": "iFqkiZOY7ELT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Functional"
+      ],
+      "metadata": {
         "id": "GpO6uA2tgfAP"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## map"
+        "### filter"
+      ],
+      "metadata": {
+        "id": "0KtD2s0n7LIp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "color_data=[\n",
+        "  {'color':'red','feeling':'warm'},\n",
+        "  {'color':'yellow','feeling':'warm'},\n",
+        "  {'color':'green','feeling':'neutral'},\n",
+        "  {'color':'purple','feeling':'neutral'},\n",
+        "]\n",
+        "\n",
+        "def is_warm(c): # returns colors that feel warm\n",
+        "  return c['feeling']=='warm'\n",
+        "\n",
+        "# filter takes 1 or 0 functions, & returns\n",
+        "# all true iterables\n",
+        "warms=filter(is_warm,color_data)\n",
+        "\n",
+        "# key is an anon function(lambda) that takes in a \n",
+        "# color called c & returns the value of 'color'\n",
+        "for warm in sorted(warms,key=lambda c:c['color']):\n",
+        "  print(warm['color'])"
+      ],
+      "metadata": {
+        "id": "cQTXryKC7QsN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### map"
       ],
       "metadata": {
         "id": "XBj7uaIMgkZS"
